# SFML_SpaceShooter

./: CMakeLists.txt
dev/: Asteroid.cpp  Asteroid.h  Bullet.cpp  Bullet.h  CMakeLists.txt  Game.cpp  Game.h  HUD.cpp  HUD.h  Ship.cpp  Ship.h  main.cpp
dev/utils/: AssetsStorage.cpp  AssetsStorage.h  RandomGenerator.h  Types.h  utils.h
